styles.css
@import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap");

.react-root {
	width: 100%; height: 100%;
	container-type: size;
}

.plugin {
  position: relative;
	width: 100%;
	display: grid;
	grid-template-rows: 75% 25%;
	aspect-ratio: 1 / 1;

	font-family: Pixelify Sans;
}

.debug-tools {
	height: 40%;
}

/* Plugin*/
.top-bar {
  position: absolute;
  display: flex;
  justify-content: end;
  width: 100%;
  height: 32px;
  padding-inline: 10px;
  background-color: #0007;
  z-index: 10;
}
.top-bar-coin {
  height: 32px;
  image-rendering: pixelated;
  -webkit-user-drag: none;
}

.coins-count {
  height: 100%;
  margin:0;
  align-content: center;
  color: #ccc;
}

.pet-animations-container {
	position: relative;
	display: flex;
	width: 100%;
	height: 100%;
	justify-content: center;
	align-items: center;
}

.pet-container {
	position: absolute;
	color: #000;
	font-size: 1rem;

	top: 50%;
}

.pet {
	height: 64px;
	width: 64px;
	transform-origin: top;

	image-rendering: pixelated;
}

.pet-level {
	position: absolute;
	width: max-content;
	font-size: 1.2rem;
	margin: 0;
	bottom: 64px;
}

.animations-text {
	/* display: none; */
	color: #000;
	font-size: 2.5rem;
	justify-self: center;
	z-index: 10;
	text-shadow: 0px 0px 4px #fff;
	animation: 400ms cubic-bezier(0.55, 0.09, 0.68, 0.53) infinite alternate
		pop-in-out;
}

.pet-accessory {
	width: 100%;
	height: 100%;
}

/* Experience Bar */

.exp-bar-container {
	display: flex;
	justify-content: end;
	position: relative;
	flex-direction: column;
	color: #000;
	margin: 10px;
}

.exp-info {
	margin: 0;
	font-size: 1.2rem;
}

.exp-bar {
	align-self: center;
	height: 100%;
	width: 100%;
	border: 3px solid #444;
	max-height: 50px;
	min-height: 30px;
}

.exp-quantity {
	width: 0%;
	height: 100%;

	background: #bbb;
}

/* Debug Tools */
.pet-buttons {
	width: 100%;
	height: 20%;
	display: flex;
	justify-content: center;

	gap: 10px;
	padding: 10px;
	box-sizing: border-box;
}

.pet-buttons button {
	height: 40px;
	width: 100px;
}

.pet-buttons .active {
	box-shadow: inset 0px 0px 10px 0px #bbb;
}

.exp-buttons {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	gap: 40px;
}

.exp-buttons button {
	height: 40px;
	width: 80px;
	font-size: 1.7rem;
}

@keyframes pop-in-out {
	from {
		opacity: 100%;
	}
	to {
		opacity: 0%;
	}
}

@container (max-width: 250px) {
	.plugin {
		grid-template-rows: 70% 30%;
	}

	.exp-bar {
		min-height: 20px;
	}

	.exp-info {
		font-size: 0.9rem;
	}
	.pet-level {
		font-size: 0.9rem;
	}
	.animations-text {
		font-size: 1.5rem;
	}
}

/* Shop */

body {
  background: #000;
}

.virtual-pet-shop {
	width: 75%;
	height: 100%;
	font-family: Pixelify Sans;
  color: #000;
  padding: 0;
  border: 2px solid #000;
  border-radius: 0;
}

.virtual-pet-shop .modal-header {
  position:relative;
	display: flex;
	justify-content: center;
	align-items: center;
  background-color: #555;
  margin:0;
  border: 2px solid #000;
}

.virtual-pet-shop .modal-header h1 {
  font-size: 2.2rem;
}

.virtual-pet-shop .modal-content {
  display: flex;
  background-color: #777;
}

.virtual-pet-shop .modal-content > * {
  border: 2px solid #000;
}

.coins-container {
  position:absolute;
  right: 50px;
	display: flex;
	align-items: center;
  font-size: 1.3rem;
}

.coins-container span {
	text-align: center;
}
.coins-container img {
  height: 43px;
}

/* Filter */
 
.filter {
	width: 20%;
	font-size: 1.5rem;
	padding: 10px;
}

.accordion {
  margin-bottom: 10px;
}
.accordion-info {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.accordion-info h3 {
  margin: 0;
  font-size: 1.2rem;
}

.accordion-info span {
  font-size: 1rem;
}

.accordion-content {
  padding-left: 10px;
}

.accordion-closed { 
  height: 0;
  overflow: hidden;
}

.accordion-item {
  display: flex;
  align-items: center;
  gap: 5px;
  font-size: 1.2rem;
}

/* Items */
.items-container {
	width: calc(100% - 150px);
	padding-left: 30px;
}

.items {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	gap: 20px;
}

.shop-item {
  border: 2px solid #000;
}

.item-img {
  padding: 12px;
  box-sizing: border-box;
}

.item-img img {
	width: 100%;
  object-fit: contain;
  image-rendering: pixelated;
  background-color: #999;
}

.item-info {
	display: flex;
	justify-content: space-between;
	align-items: baseline;
  border-top: 2px solid #000;
  padding: 12px;
}

.item-name {
  margin:0;
	font-size: 1.2rem;
}

.item-price {
	font-size: 1rem;
}

